[package]
name = "slime-joycon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
joycon = { git = "https://github.com/Yamakaky/joy" }
dcmimu = "0.2.2"
anyhow = "*"
cgmath = "0.18.0"
binrw = { git = "https://github.com/jam1garner/binrw" }
